exports[`CurrentRefinements allows clearing unique items of a refinement 1`] = `
<div
  className="ais-CurrentRefinements__root">
  <div
    className="ais-CurrentRefinements__items">
    <div
      className="ais-CurrentRefinements__item ais-CurrentRefinements__itemParent">
      <span
        className="ais-CurrentRefinements__itemLabel">
        Genre
      </span>
      <div
        className="ais-CurrentRefinements__item">
        <span
          className="ais-CurrentRefinements__itemLabel">
          Sci-fi
        </span>
        <button
          className="ais-CurrentRefinements__itemClear"
          onClick={[Function]}>
          ✕
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CurrentRefinements renders a list of current refinements 1`] = `
<div
  className="ais-CurrentRefinements__root">
  <div
    className="ais-CurrentRefinements__items">
    <div
      className="ais-CurrentRefinements__item">
      <span
        className="ais-CurrentRefinements__itemLabel">
        Genre
      </span>
      <button
        className="ais-CurrentRefinements__itemClear"
        onClick={[Function]}>
        ✕
      </button>
    </div>
  </div>
</div>
`;
